--- a/workspace/BouncingBall/bin/AndroidManifest.xml
+++ b/workspace/BouncingBall/bin/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:label="@string/app_name" >
        
         </activity>
+        <service android:name="BackgroundSound"  android:enabled="true"></service>
     </application>
 
 </manifest>
