--- a/workspace/RTGame/AndroidManifest.xml
+++ b/workspace/RTGame/AndroidManifest.xml
@@ -31,6 +31,7 @@
        
         </activity>
         <service android:name="BackgroundSound"  android:enabled="true"></service>
+        <service android:name="StartSound"  android:enabled="true"></service>
     </application>
 
 </manifest>
