--- a/workspace/RTGame/AndroidManifest.xml
+++ b/workspace/RTGame/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <service android:name="BackgroundSound"  android:enabled="true"></service>
         <service android:name="StartSound"  android:enabled="true"></service>
         <service android:name="ShootSound"  android:enabled="true"></service>
+        <service android:name="BeamPowerUpSound"  android:enabled="true"></service>
         
     </application>
 
