--- a/workspace/RTGame/AndroidManifest.xml
+++ b/workspace/RTGame/AndroidManifest.xml
@@ -13,28 +13,43 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-       
         <activity
-            android:name="com.e0403.rtgame.StartActivity"
+            android:name=".StartActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_start"
             android:theme="@style/FullscreenTheme" >
-                 <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-         <activity
-            android:name="com.e0403.rtgame.MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name" >
-       
         </activity>
-        <service android:name="BackgroundSound"  android:enabled="true"></service>
-        <service android:name="StartSound"  android:enabled="true"></service>
-        <service android:name="ShootSound"  android:enabled="true"></service>
-        <service android:name="BeamPowerUpSound"  android:enabled="true"></service>
-        
+
+        <service
+            android:name=".BackgroundSound"
+            android:enabled="true" >
+        </service>
+        <service
+            android:name=".StartSound"
+            android:enabled="true" >
+        </service>
+        <service
+            android:name=".ShootSound"
+            android:enabled="true" >
+        </service>
+        <service
+            android:name=".BeamPowerUpSound"
+            android:enabled="true" >
+        </service>
+
+        <activity
+            android:name=".EndActivity"
+            android:label="@string/title_activity_end" >
+        </activity>
     </application>
 
 </manifest>
